# servicemesh

./: .ansible-lint  .gitignore  .travis.yml  .yamllint  README.md  galaxy.yml  pyproject.toml  requirements-collections.yml  requirements-dev.txt  requirements-monorepo.yml  requirements-standalone.yml  requirements.txt  tox.ini
.github/workflows/: molecule.yml
defaults/: main.yml
meta/: main.yml
molecule/common/: Dockerfile.j2
molecule/default/: converge.yml  molecule.yml  prepare.yml
molecule/default/tests/: test_default.py  test_master.py
molecule/kvm/: converge.yml  molecule.yml  prepare.yml
molecule/parallels/: converge.yml  molecule.yml
tasks/: main.yml  requirements.yml  service-mesh.yml
vars/: main.yml
