[tool.poetry]
name = "tcharl.servicemesh"
version = "0.1.0"
description = "Deploys istio service mesh on kubernetes"
authors = ["Charlie Mordant <cmordant1@gmail.com>"]
license = "Apache2"
readme = "README.md"
include = ["defaults", "files", "handlers", "meta", "tasks", "templates", "vars"]
packages = [
    {include = "meta/**/*.py"}
]

[tool.poetry.dependencies]
python = ">=3.12"
ansible = "^11.5.0"
jmespath = "^1.0.1"
netaddr = "^1.3.0"
kubernetes = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
tox = "*"
yamllint = "*"
pytest-testinfra = "*"
python-vagrant = "*"
molecule = "25.1.0"
molecule-plugins = { version = "23.7.0", extras = ["vagrant"] }
ansible-lint = { version = "v25.9.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
